# CapybaraAgent

./: .dockerignore  .env.defaults  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
design/: CapybaraAgent.dc.html
design/design_handoff_capybaraagent/: README.md
design_handoff_capybaraagent/: CapybaraAgent.dc.html  README.md
docs/superpowers/backlog/: 2026-07-04-system-status-endpoint-concept.md
docs/superpowers/plans/: 2026-07-02-chat-core-backend.md  2026-07-03-backend-refactor.md  2026-07-03-dao-filters.md  2026-07-03-frontend-chat-auth.md  2026-07-03-login.md  2026-07-03-user-registration.md  2026-07-04-chat-management.md  2026-07-04-frontend-chat-rendering.md  2026-07-04-model-selection.md  2026-07-05-memory-facts-backend.md  2026-07-05-memory-facts-frontend.md  2026-07-05-tool-call-ui.md  2026-07-06-mcp-client-backend.md  2026-07-06-memory-save-indicator.md  2026-07-07-mcp-client-frontend.md  2026-07-08-chainlit-deepagents-migration.md  2026-07-11-dual-mode-fast-smart.md
docs/superpowers/specs/: 2026-07-02-chat-core-backend-design.md  2026-07-03-frontend-chat-auth-design.md  2026-07-03-login-design.md  2026-07-03-user-registration-design.md  2026-07-04-chat-management-design.md  2026-07-04-config-env-layering-design.md  2026-07-04-frontend-chat-rendering-design.md  2026-07-04-model-selection-design.md  2026-07-05-memory-facts-design.md  2026-07-05-tool-call-ui-design.md  2026-07-06-filter-non-chat-models-design.md  2026-07-06-mcp-client-backend-design.md  2026-07-06-memory-save-indicator-design.md  2026-07-07-mcp-client-frontend-design.md  2026-07-08-chainlit-deepagents-migration-design.md  2026-07-11-dual-mode-fast-smart-design.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts  sse.test.ts  sse.ts  types.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx  storage.ts
frontend/src/chainlit/: ChainlitProvider.tsx  client.ts  convertChainlitMessage.test.ts  convertChainlitMessage.ts  useChainlitThread.test.tsx  useChainlitThread.ts
frontend/src/chat/: chatApi.mutations.test.tsx  chatApi.test.tsx  chatApi.ts  chatPrefs.ts  convertMessage.test.ts  convertMessage.ts  lastModel.ts  memorySave.test.ts  memorySave.ts  messages.ts  parts.ts  runtime.test.tsx  runtime.ts  useChatStream.test.tsx  useChatStream.ts  useChats.test.tsx  useChats.ts  useModels.ts  useThreads.test.tsx  useThreads.ts
frontend/src/components/: BackgroundGlow.module.css  BackgroundGlow.tsx  CapyLogo.test.tsx  CapyLogo.tsx  ChatContextMenu.test.tsx  ChatContextMenu.tsx  ChatListItem.test.tsx  ChatListItem.tsx  CodeBlock.module.css  CodeBlock.test.tsx  CodeBlock.tsx  Composer.module.css  Composer.test.tsx  Composer.tsx  ConnectWizard.module.css  ConnectWizard.test.tsx  ConnectWizard.tsx  FactCard.module.css  FactCard.test.tsx  FactCard.tsx  FactForm.module.css  FactForm.test.tsx  FactForm.tsx  McpServerCard.module.css  McpServerCard.test.tsx  McpServerCard.tsx  McpToolChip.module.css  McpToolChip.test.tsx  McpToolChip.tsx  MemorySaveChip.test.tsx  MemorySaveChip.tsx  Message.module.css  Message.tsx  MessageMarkdown.module.css  MessageMarkdown.test.tsx  MessageMarkdown.tsx  Sidebar.mcp.test.tsx  Sidebar.module.css  Sidebar.tsx  (+12 more)
src/capybara/: __init__.py  app.py  chainlit_app.py  chainlit_config.py  chainlit_target.py  config.py  main.py
tests/: conftest.py  support.py  test_agent_embed.py  test_agent_models.py  test_agent_stream.py  test_agent_title.py  test_agent_tool_stream.py  test_auth_api.py  test_auth_service.py  test_chainlit_auth.py  test_chainlit_data_layer.py  test_chainlit_deepagents_flow.py  test_chainlit_model_selection.py  test_chainlit_mount.py  test_chat_pref_commands.py  test_chat_pref_service.py  test_chat_prefs_api.py  test_chat_service.py  test_chats_api.py  test_config.py  test_db_session.py  test_deep_runtime.py  test_deep_tools.py  test_event_bus.py  test_events_api.py  test_fact_commands.py  test_health.py  test_login_command.py  test_mcp_adapter.py  test_mcp_api.py  test_mcp_commands.py  test_mcp_models.py  test_mcp_repo.py  test_mcp_service.py  test_memory_api.py  test_memory_autocapture_api.py  test_memory_extract.py  test_memory_recall_tool.py  test_memory_saves_api.py  test_memory_service.py  (+8 more)
(+128 files in other folders)
