[project]
name = "capybara"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.50",
    "pydantic-ai>=2.5",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0.51, <3.0",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "httpx>=0.28",
    "argon2-cffi>=25.1",
    "pyjwt>=2.13",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "testcontainers>=4.14",
    "ruff>=0.15",
    "mypy>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capybara"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "D"]
ignore = [
    "D105",  # magic-method docstrings not required
    "D107",  # __init__ docstrings not required; class docstring suffices
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/capybara/migrations/versions/**" = ["D"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
