[project]
name = "capybara"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.50",
    "chainlit>=2.0",
    "deepagents>=0.1",
    # Temporary migration compatibility: old routers/services still import
    # pydantic-ai until Task 14 removes the legacy chat runtime.
    "pydantic-ai>=2.5",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=0.2",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0.51, <3.0",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "httpx>=0.28",
    "argon2-cffi>=25.1",
    "pyjwt>=2.13",
    "pgvector>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "testcontainers>=4.14",
    "ruff>=0.15",
    "mypy>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capybara"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "D"]
ignore = [
    "D105",  # magic-method docstrings not required
    "D107",  # __init__ docstrings not required; class docstring suffices
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/capybara/migrations/versions/**" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
